--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <!-- header section start here -->
     </header>
     <main class="container mx-auto">
+      
         <!-- fetured section -->
         <section class="text-center my-24">
 
@@ -126,6 +127,22 @@
             </div>
         </section>
         <!-- fresh tea section -->
+
+        <!-- supper client section  -->
+        <section class="my-24 rounded-xl py-20 px-16 bg-gradient-to-r from-[#FF8938] to-red-500 flex flex-col lg:flex-row gap-12">
+          <div class="flex-1 space-y-5">
+              <h2 class="text-5xl text-[#F4F4F4] font-extrabold">Meet Our Super <br> Clients</h2>
+              <p class="text-[#F4F4F4]">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words which don't <br> look even slightly believable. </p>
+              <button class="btn bg-white bg-gradient-to-r from-red-500 to-[#FF8938]">Show All</button>
+          </div>
+          <div class="flex-1 relative p-10 rounded-lg bg-white">
+            <img class="absolute -top-6 -left-6" src="./images/client.png" alt="">
+            <p class="font-semibold text-[#777]">We are providing the best and suitable home <br> insurance services for the people who are <br> interested to treatment</p>
+            <h4 class="font-bold mt-5">Ilham Yuda</h4>
+            <p class="font-medium">Businessman</p>
+          </div>
+        </section>
+        <!-- supper client section  -->
     </main>
     <footer>
         
