--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
           theme: {
             extend: {
               colors: {
-                clifford: '#da373d',
+                'gradient-start': '#FF8938',
+                'gradient-end': '#F00',
               }
             }
           }
@@ -34,19 +35,19 @@
 <body class="Manrope">
     <header class="container mx-auto">
             <!-- header section start here -->
-            <div class="hero ">
-                <div class="hero-content flex-col lg:flex-row">
+            <div class=" ">
+                <div class="flex justify-between items-center flex-col lg:flex-row">
                   <div>
                     <h1 class="text-7xl font-extrabold">It's good <br> tea time at The <br> Tea House</h1>
                     <p class="py-6">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
-                    <button class="btn btn-primary">Explore More   
+                    <button class="btn bg-gradient-to-r from-gradient-start to-gradient-end">Explore More   
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
                             <path d="M4.5 19.7788L19.5 4.77881M19.5 4.77881H8.25M19.5 4.77881V16.0288" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                     </button>
                   </div>
                   <div>
-                    <img src="./images/banner.png" class="max-w-sm rounded-lg" />
+                    <img src="./images/banner.png" class=" rounded-lg" />
                     <div class="flex items-center gap-4 bg-white rounded-xl relative bottom-12 drop-shadow-lg p-5 w-60">
                         <i class="fa-solid fa-star text-4xl text-amber-400"></i>
                         <div>
@@ -129,23 +130,147 @@
         <!-- fresh tea section -->
 
         <!-- supper client section  -->
-        <section class="my-24 rounded-xl py-20 px-16 bg-gradient-to-r from-[#FF8938] to-red-500 flex flex-col lg:flex-row gap-12">
-          <div class="flex-1 space-y-5">
-              <h2 class="text-5xl text-[#F4F4F4] font-extrabold">Meet Our Super <br> Clients</h2>
-              <p class="text-[#F4F4F4]">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words which don't <br> look even slightly believable. </p>
-              <button class="btn bg-white bg-gradient-to-r from-red-500 to-[#FF8938]">Show All</button>
+        <section class="my-24 rounded-xl py-20 px-16  bg-gradient-to-r from-gradient-start to-gradient-end items-center flex flex-col lg:flex-row gap-12">
+          <div class="flex items-center lg:pr-14">
+              <div class="space-y-5">
+                <h2 class="text-5xl text-[#F4F4F4] font-extrabold">Meet Our Super <br> Clients</h2>
+                <p class="text-[#F4F4F4]">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words which don't <br> look even slightly believable. </p>
+                <button class="btn bg-white bg-gradient-to-r from-red-500 to-[#FF8938]">Show All</button>
+              </div>
           </div>
-          <div class="flex-1 relative p-10 rounded-lg bg-white">
-            <img class="absolute -top-6 -left-6" src="./images/client.png" alt="">
-            <p class="font-semibold text-[#777]">We are providing the best and suitable home <br> insurance services for the people who are <br> interested to treatment</p>
-            <h4 class="font-bold mt-5">Ilham Yuda</h4>
-            <p class="font-medium">Businessman</p>
+          <!-- revew container  -->
+          <div class=" relative lg:ml-28 ">
+            <!-- next review -->
+            <div class=" relative opacity-40 mb-16 p-10 rounded-lg z-10 lg:w-[433px] lg:h-[232px] bg-white">
+              <img class="absolute -top-6 -left-6 border-4 border-white rounded-full" src="./images/client.png" alt="">
+              <p class="font-semibold text-[#777]">We are providing the best and suitable home <br> insurance services for the people who are <br> interested to treatment</p>
+              <h4 class="font-bold mt-5">Ilham Yuda</h4>
+              <p class="font-medium">Businessman</p>
+              <div class="flex justify-end">
+                <img src="./images/circles.png" alt="">
+              </div>
+            </div>
+            <!-- current review -->
+            <div class=" absolute top-40 lg:-left-40 sm:left-20 p-10 rounded-lg z-20 lg:w-[433px] lg:h-[232px] bg-white">
+              <img class="absolute -top-6 -left-6 border-4 border-white rounded-full" src="./images/client.png" alt="">
+              <p class="font-semibold text-[#777]">We are providing the best and suitable home <br> insurance services for the people who are <br> interested to treatment</p>
+              <h4 class="font-bold mt-5">Ilham Yuda</h4>
+              <p class="font-medium">Businessman</p>
+              <div class="flex justify-end">
+                <img src="./images/circles.png" alt="">
+              </div>
+            </div>
+            <!-- previous review -->
+            <div class=" relative opacity-40 p-10 rounded-lg z-10 lg:w-[433px] lg:h-[232px] bg-white">
+              <img class="absolute -top-6 -left-6 border-4 border-white rounded-full" src="./images/client.png" alt="">
+              <p class="font-semibold text-[#777]">We are providing the best and suitable home <br> insurance services for the people who are <br> interested to treatment</p>
+              <h4 class="font-bold mt-5">Ilham Yuda</h4>
+              <p class="font-medium">Businessman</p>
+              <div class="flex justify-end">
+                <img src="./images/circles.png" alt="">
+              </div>
+            </div>
           </div>
         </section>
         <!-- supper client section  -->
+
+        <!-- News & Events -->
+        <section>
+          <div>
+            <div class="space-y-5">
+              <h2 class="font-extrabold text-5xl text-center">News & Events</h2>
+              <p class="font-medium text-center text-[#777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, <br> by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+            <div class="flex lg:my-12 justify-center gap-6 flex-col lg:flex-row">
+              <!-- events card-1 -->
+              <div class="card pt-5 bg-base-100 shadow-xl">
+                <figure><img src="./images/news-1.png" alt=""></figure>
+                <div class="card-body text-left">
+                  <p class="font-medium text-[#777]">Feb 05, 2027</p>
+                  <h3 class="text-xl font-extrabold">Collecting 8 points for discount</h3>
+                  <p class="font-medium text-[#777]">There are many variations of passages of <br> Lorem Ipsum available.</p>
+                  <h4 class="font-bold">Learn More</h4>
+                </div>
+              </div>
+              <!-- events card-2 -->
+              <div class="card pt-5 bg-base-100 shadow-xl">
+                <figure><img src="./images/news-2.png" alt=""></figure>
+                <div class="card-body text-left">
+                  <p class="font-medium text-[#777]">Feb 05, 2027</p>
+                  <h3 class="text-xl font-extrabold">Collecting 8 points for discount</h3>
+                  <p class="font-medium text-[#777]">There are many variations of passages of <br> Lorem Ipsum available.</p>
+                  <h4 class="font-bold">Learn More</h4>
+                </div>
+              </div>
+              <!-- events card-3 -->
+              <div class="card pt-5 bg-base-100 shadow-xl">
+                <figure><img src="./images/news-3.png" alt=""></figure>
+                <div class="card-body text-left">
+                  <p class="font-medium text-[#777]">Feb 05, 2027</p>
+                  <h3 class="text-xl font-extrabold">Collecting 8 points for discount</h3>
+                  <p class="font-medium text-[#777]">There are many variations of passages of <br> Lorem Ipsum available.</p>
+                  <h4 class="font-bold">Learn More</h4>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+        </section>
+        <!-- News & Events -->
     </main>
-    <footer>
-        
+    <footer class="lg:px-40 py-10 text-base-content bg-gradient-to-r from-[#ff00001a] to-[#ff89381a]">
+      <div class="flex justify-between mb-14 items-center">
+        <img src="./images/cup.png" alt="">
+        <p class="space-x-10 pr-16">
+          <span>Ready to get strated?</span>
+          <button class="btn text-white bg-gradient-to-r from-gradient-start to-gradient-end">Get Started</button>
+        </p>
+      </div>
+      <div class="footer ">
+        <div>
+          <span class="text-xl font-semibold">Quick Links</span> 
+          <a class="link link-hover">Home</a> 
+          <a class="link link-hover">About Us</a> 
+          <a class="link link-hover">Insurance</a> 
+          <a class="link link-hover">Privacy Policy</a>
+        </div> 
+        <div>
+          <span class="text-xl font-semibold">Our Service</span> 
+          <a class="link link-hover">Life Insurance</a> 
+          <a class="link link-hover">Car Insurance</a> 
+          <a class="link link-hover">Health Insurance</a> 
+          <a class="link link-hover">House Insurance</a>
+        </div> 
+        <div>
+          <span class="text-xl font-semibold">Help</span> 
+          <a class="link link-hover">FAQs</a> 
+          <a class="link link-hover">Contact Us</a>
+        </div> 
+        <div>
+          <span class="text-2xl font-semibold">Subscribe to our <br> newsletter</span> 
+          <div class="form-control w-80">
+            <label class="label">
+              <span class="label-text">Enter your email address</span>
+            </label> 
+            <div class="relative">
+              <input type="text" placeholder="username@site.com" class=" py-4 bg-transparent border-b-2 border-black outline-none" /> 
+              <button class="btn btn-primary bg-gradient-to-r from-gradient-start to-gradient-end absolute top-0 right-0 rounded-full">
+                <i class="fa-solid fa-chevron-right"></i>
+              </button>
+            </div>
+            <div class="flex gap-16 mt-12  my-4">
+              <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg>
+              </a> 
+              <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z"></path></svg></a>
+              <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z"></path></svg></a>
+            </div>
+          </div>
+        </div>
+     </div>
+      <div class="text-center mt-16 pb-5">
+        <p class="font-medium">Copyright © 2023 - All right reserved by ACME Industries Ltd</p>
+      </div>
     </footer>
 </body>
 </html>
+
